# interspecies-reviewer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  deploy.yaml  gitgardian.yaml
kubernetes/: deployment.yaml
manifests/: deployment.yaml
src/: main.rs
src/commands/: source.rs
