[package]
name = "interspaces_reviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
regex = "1.10.3"
serenity = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
